--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "consumer": "node consumer.js",
+    "consumer:dev": "nodemon consumer.js",
     "lint": "eslint .",
     "migrate": "node-pg-migrate"
   },
@@ -16,12 +18,15 @@
   "dependencies": {
     "@hapi/hapi": "^21.4.4",
     "@hapi/jwt": "^3.2.3",
+    "amqplib": "^0.10.9",
     "auto-bind": "^4.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "joi": "^18.0.2",
     "nanoid": "^3.3.11",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.11",
+    "pg": "^8.16.3",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "eslint": "^9.39.2",
