--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "commonjs",
   "dependencies": {
     "@hapi/hapi": "^21.4.4",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.3",
     "amqplib": "^0.10.9",
     "auto-bind": "^4.0.0",
